--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/mouse.css">
+    <link rel="stylesheet" href="css/app.css">
+    <title>30Days30Websites</title>
+</head>
+
+<body onload="followMouse();" id="body">
+
+    <div id="ball"></div>
+    <div class="main">
+        <div class="top-bar">
+            <div class="box">
+                <h1>Hi.</h1>
+            </div>
+            <div class="github">
+                <a href="https://github.com/llastkrakw"><img src="assets/main/github_60px_blanc.png" title="github"></a>
+            </div>
+        </div>
+        <div class="middle">
+            <div class="day">
+                <p>#</p>
+                <p>30Days</p>
+                <p>30Websites</p>
+            </div>
+            <div class="logo">
+                <img src="assets/main/logo_rouge.svg" title="logo" width="200px" height="200px">
+                <div class="name">#llastkrakw</div>
+            </div>
+            <div class="slogant">
+                <p>MAKE</p>
+                <p>THE</p>
+                <p class="web">WEB</p>
+                <p>AWESOME</p>
+            </div>
+        </div>
+        <div class="design side">design</div>
+        <div class="integr side">integration</div>
+    </div>
+    <div class="content">
+        <p>Hello everyone, there i try my first <span class="con-ita">#30Days</span> websites challenge.</p>
+        <p>You can see projects and code there. Send me your reviews on my mail.</p>
+        <p>This is not my portfolyo :). Have fun !</p>
+    </div>
+    <div class="caroussel"></div>
+    <div class="footer">
+        <div class="info">
+            <p>llastkrakw21@gmail.com</p>
+            <p><a href="https://codepen.io/llastkrakw">See this on Codepen.io</a></p>
+            <p>+237 694304832</p>
+        </div>
+        <div class="motiv">
+            <blockquote>Be passionned and <br>build your Dream.</blockquote>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="js/biblio/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/biblio/hammer.js"></script>
+    <script type="text/javascript" src="js/biblio/anime.min.js"></script>
+    <script type="text/javascript" src="js/biblio/vue.js"></script>
+</body>
+
+</html>
