first commit for handle site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
         <p>You can see projects and code there. Send me your reviews on my mail.</p>
         <p>This is not my portfolyo :). Have fun !</p>
     </div>
-    <div class="caroussel"></div>
+    <div class="caroussel">
+        <h3>All projects</h3>
+        <div class="cards-container">
+            <div class="card">
+            </div>
+            <div class="card">
+            </div>
+            <div class="card">
+            </div>
+            <div class="card">
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="info">
             <p>llastkrakw21@gmail.com</p>
