first commit for handle site

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>30Websites</p>
             </div>
             <div class="logo">
-                <img src="assets/main/logo_rouge.svg" title="logo" width="200px" height="200px">
+                <img src="assets/main/logo_rouge.svg" title="logo" class="logo-img" width="200px" height="200px">
                 <div class="name">#llastkrakw</div>
             </div>
             <div class="slogant">
@@ -56,8 +56,6 @@
             </div>
             <div class="card">
             </div>
-            <div class="card">
-            </div>
         </div>
     </div>
     <div class="footer">
@@ -66,11 +64,7 @@
             <p><a href="https://codepen.io/llastkrakw">See this on Codepen.io</a></p>
             <p>+237 694304832</p>
         </div>
-        <div class="motiv">
-            <blockquote>Be passionned and <br>build your Dream.</blockquote>
-        </div>
     </div>
-
     <script type="text/javascript" src="js/biblio/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/biblio/hammer.js"></script>
