--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
         <p>You can see projects and code there. Send me your reviews on my mail.</p>
         <p>This is not my portfolyo :). Have fun !</p>
     </div>
-    <div class="caroussel">
-        <h3>All projects</h3>
+    <div class="caroussel" id="caroussel">
+        <h3>All projects 0/30</h3>
+        <div class="next" v-on:click="goToNext()">Next</div><br>
+        <div class="prev" v-on:click="backToPrevious()">Prev</div>
         <div class="cards-container">
-            <div class="card">
-            </div>
-            <div class="card">
-            </div>
-            <div class="card">
+            <div class="card" v-for="item in activeItems">
+                <h1 class="index">{{item.id}}</h1>
+                <p class="card-title">{{item.name}}</p>
             </div>
         </div>
     </div>
@@ -66,10 +66,10 @@
         </div>
     </div>
     <script type="text/javascript" src="js/biblio/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="js/biblio/vue.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/biblio/hammer.js"></script>
     <script type="text/javascript" src="js/biblio/anime.min.js"></script>
-    <script type="text/javascript" src="js/biblio/vue.js"></script>
 </body>
 
 </html>
