--- a/projects/ogbon/index.html
+++ b/projects/ogbon/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../favicon.ico" />
     <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Poppins:ital,wght@0,300;0,400;0,800;1,500&family=Righteous&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Ogbon</title>
