--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon"  href="favicon.ico"/>
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/mouse.css">
     <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -49,13 +49,16 @@
         <p>This is not my portfolyo :). Have fun !</p>
     </div>
     <div class="caroussel" id="caroussel">
-        <h3>All projects 0/30</h3>
+        <h3>All projects 1/30</h3>
         <div class="next" v-on:click="goToNext()">Next</div><br>
         <div class="prev" v-on:click="backToPrevious()">Prev</div>
         <div class="cards-container">
-            <div class="card" v-for="item in activeItems">
-                <h1 class="index">{{item.id}}</h1>
-                <p class="card-title">{{item.name}}</p>
+            <div class="card" v-for="item in activeItems" @click="redirect(item.id)">
+                <h1 class="index">#{{item.id}}</h1>
+                <div class="preview" :style="[item.img ? {'background': 'url(' + item.img + ') no-repeat', 'background-size': 'contain'} : {'background': '#FFF'}]"></div>
+                <p class="card-title"><a v-bind:href="item.url">{{item.name}}</a></p>
+                <blockquote class="card-desc">{{item.desc}}</blockquote>
+                <p><a v-bind:href="item.codepenLink">codepen</a></p>
             </div>
         </div>
     </div>
